--- a/README
+++ b/README
@@ -10,6 +10,12 @@ Ongoing work on coupling Alp Dener's computational structural mechanics program
 LECSM: https://bitbucket.org/denera/linear_elastic_csm
 Quasi 1D Euler: https://bitbucket.org/jehicken/quasi_1d_euler
 _________________________________________________________________________________
+COMPILING AERO STRUCTURAL MDA:
+
+BOOST_HOME and KONA_HOME environment variables must be set to Boost includes
+directory and Kona root directory respectively. If dependencies are installed
+properly, the test solver MDA_test.bin should compile.
+_________________________________________________________________________________
 DEPENDENCIES:
 + Boost
 + Kona (https://bitbucket.org/jehicken/kona)
@@ -26,13 +32,6 @@ the Bspline, not the mesh coordinates.
 _________________________________________________________________________________
 MAJOR ISSUES:
 
-+ Assemble the system preconditioner.
-
-+ Figure out how to find the system residual L2 norm.
-
-+ Clear up the operator(this) calls. How do they work?
-
-+ Review CSM gradients.
-
-+ Review the calculation of system residual.
++ System residual is returning NaN. CSM residual has been independently verified.
+CFD residual might be the problem.
 
