Updated README file.

--- a/README
+++ b/README
@@ -1,34 +1,30 @@
 Authors: Prof. Jason Hicken, Alp Dener
-Summer 2013, C/C++
 Rensselaer Polytechnic Institute
+Optimal Design Lab
+Summer/Fall 2013, C/C++
 _________________________________________________________________________________
 AERO STRUCTURAL MULTIDISCIPLINARY ANALYSIS PROGRAM
 
 Ongoing work on coupling Alp Dener's computational structural mechanics program 
 (2D beam) with Prof. Jason Hicken's Quasi 1D Euler flow solver.
 
-LECSM: https://bitbucket.org/denera/linear_elastic_csm
-Quasi 1D Euler: https://bitbucket.org/jehicken/quasi_1d_euler
+LECSM: https://bitbucket.org/odl/linear-elasticity-csm
+Quasi 1D Euler: https://bitbucket.org/odl/quasi1d-euler
+_________________________________________________________________________________
+DEPENDENCIES
+
++ Boost 1.55:
+http://www.boost.org/users/history/version_1_55_0.html
+
++ Kona Optimization Library:
+https://bitbucket.org/odl/kona
 _________________________________________________________________________________
 COMPILING AERO STRUCTURAL MDA:
 
 BOOST_HOME and KONA_HOME environment variables must be set to Boost includes
 directory and Kona root directory respectively. If dependencies are installed
 properly, the test solver MDA_test.bin should compile.
-_________________________________________________________________________________
-DEPENDENCIES:
 
-+ Boost (http://www.boost.org/)
-+ Kona (https://bitbucket.org/jehicken/kona)
-_________________________________________________________________________________
-CURRENT ISSUES:
-
-+ Objective function is incomplete.
-
-+ Transpose-product of the aero-structural jacobian needs review.
-
-+ eval_precond for userFunc seems unnecessary. This is buried into the actual
-preconditioning routines
-
-+ CalcInverseDesigndJdQ missing from Quasi 1D Euler
+Installation has been verified on Ubuntu 12.04 LTS Desktop with GCC4.8
+(ppa:ubuntu-toolchain-r/test)
 
